# rust-embedded-demo

./: .gitignore  Cargo.toml
.cargo/: config.toml
src/: main.rs  rtt_logger.rs
