[package]
authors = ["Haobo Gu <haobogu@outlook.com>"]
edition = "2018"
readme = "README.md"
name = "rust-embedded-demo"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
stm32h7xx-hal = { version = "0.15.1", features = ["rt", "stm32h7b0"] }
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
rtt-target = "0.4.0"
log = "0.4"
# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"
# this lets you use `cargo fix`!
[[bin]]
name = "rust-embedded-demo"
test = false
bench = false

[profile.dev.package."*"]
codegen-units = 1 # better optimizations
opt-level = "z"

[profile.release.package."*"]
codegen-units = 1 # better optimizations
opt-level = "z"

# Set the settings for build scripts and proc-macros.
[profile.dev.build-override]
opt-level = "z"

[profile.release]
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations
opt-level = "z"
